--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Bootstrap Project",
   "main": "index.ts",
   "scripts": {
-    "test": "webpack"
+    "dev": "webpack --config ./conf/dev.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
