--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.7.3",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "rxjs": "^6.5.3"
+  }
 }
