--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bootstrap Project",
   "main": "index.ts",
   "scripts": {
-    "dev": "webpack --config ./conf/dev.config.js"
+    "dev": "webpack --config ./conf/dev.config.js",
+    "prod": "webpack --config ./conf/prod.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,9 +18,11 @@
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.2.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
