--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Bootstrap Project",
   "main": "index.ts",
   "scripts": {
-    "dev": "webpack --config ./conf/dev.config.js",
+    "dev": "webpack --config ./conf/dev.config.js --watch",
     "prod": "webpack --config ./conf/prod.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
     "autoprefixer": "^9.7.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
+    "eslint": "^6.7.2",
     "html-webpack-plugin": "^4.0.0-beta.11",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
@@ -20,6 +23,7 @@
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "ts-loader": "^6.2.1",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
