--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "main": "index.ts",
   "scripts": {
     "dev": "webpack --config ./conf/dev.config.js --watch",
-    "prod": "webpack --config ./conf/prod.config.js"
+    "prod": "webpack --config ./conf/prod.config.js",
+    "tsc": "tsc --noEmit"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "autoprefixer": "^9.7.3",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
     "eslint": "^6.7.2",
@@ -22,7 +31,6 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.2.1",
-    "ts-loader": "^6.2.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
