--- a/package.json
+++ b/package.json
@@ -37,6 +37,12 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "rxjs": "^6.5.3"
+    "axios": "^0.19.0",
+    "dexie": "^2.0.4",
+    "dexie-export-import": "^1.0.0-beta.14",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
+    "rxjs": "^6.5.3",
+    "socket.io-client": "^2.3.0"
   }
 }
