--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/plugin-proposal-numeric-separator": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
@@ -21,6 +22,7 @@
     "@typescript-eslint/parser": "^2.10.0",
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
+    "circular-dependency-plugin": "^5.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
     "eslint": "^6.7.2",
@@ -37,6 +39,12 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "rxjs": "^6.5.3"
+    "axios": "^0.19.0",
+    "dexie": "^2.0.4",
+    "dexie-export-import": "^1.0.0-beta.14",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
+    "rxjs": "^6.5.3",
+    "socket.io-client": "^2.3.0"
   }
 }
