--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^4.0.0-beta.11",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
+    "nunjucks-loader": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.2.1",
@@ -46,8 +47,10 @@
     "bootstrap": "^4.4.1",
     "dexie": "^2.0.4",
     "dexie-export-import": "^1.0.0-beta.14",
+    "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "nunjucks": "^3.2.0",
     "rxjs": "^6.5.3",
     "socket.io-client": "^2.3.0"
   }
