--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/moment": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "dexie": "^2.0.4",
