--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "terser-webpack-plugin": "^2.2.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3",
+    "vue-class-component": "^7.1.0",
+    "vue-loader": "^15.7.2",
+    "vue-property-decorator": "^8.3.0",
+    "vue-template-compiler": "^2.6.10",
+    "vue-template-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
@@ -55,6 +60,7 @@
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "rxjs": "^6.5.3",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "vue": "^2.6.10"
   }
 }
