--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "moment-duration-format": "^2.3.2",
     "rxjs": "^6.5.3",
     "socket.io-client": "^2.3.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   }
 }
