--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "@fullcalendar/timegrid": "^4.3.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
     "dexie": "^2.0.4",
     "dexie-export-import": "^1.0.0-beta.14",
+    "downloadjs": "^1.4.7",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
