--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
+    "@types/datatables.net": "^1.10.18",
+    "@types/jquery": "^3.3.31",
+    "@types/moment-duration-format": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "autoprefixer": "^9.7.3",
@@ -54,15 +57,20 @@
     "@fullcalendar/timegrid": "^4.3.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-colorpicker": "^3.2.0",
     "bootstrap-vue": "^2.1.0",
+    "datatables.net-bs4": "^1.10.20",
     "dexie": "^2.0.4",
     "dexie-export-import": "^1.0.0-beta.14",
     "downloadjs": "^1.4.7",
     "font-awesome": "^4.7.0",
+    "inputmask": "^5.0.0",
+    "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "rxjs": "^6.5.3",
     "socket.io-client": "^2.3.0",
+    "tempusdominus-core": "^5.0.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   }
