--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
     "@types/datatables.net": "^1.10.18",
+    "@types/eonasdan-bootstrap-datetimepicker": "^4.17.26",
     "@types/jquery": "^3.3.31",
     "@types/moment-duration-format": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
@@ -59,6 +60,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-colorpicker": "^3.2.0",
     "bootstrap-vue": "^2.1.0",
+    "bootstrap4-toggle": "^3.6.1",
     "datatables.net-bs4": "^1.10.20",
     "dexie": "^2.0.4",
     "dexie-export-import": "^1.0.0-beta.14",
@@ -70,7 +72,9 @@
     "moment-duration-format": "^2.3.2",
     "rxjs": "^6.5.3",
     "socket.io-client": "^2.3.0",
+    "tempusdominus-bootstrap-4": "^5.1.2",
     "tempusdominus-core": "^5.0.3",
+    "typeahead.js": "^0.11.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   }
