--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/eonasdan-bootstrap-datetimepicker": "^4.17.26",
     "@types/jquery": "^3.3.31",
     "@types/moment-duration-format": "^2.2.2",
+    "@types/typeahead": "^0.11.32",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "autoprefixer": "^9.7.3",
