--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "tempusdominus-core": "^5.0.3",
     "typeahead.js": "^0.11.1",
     "vue": "^2.6.10",
+    "vue-js-toggle-button": "^1.3.3",
     "vue-router": "^3.1.3"
   }
 }
